<resources>
    <string name="app_name">Debt</string>
    <string name="name">Enter name</string>
    <string name="amount">Enter amount</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calender">CALENDER</string>
    <string name="next"><![CDATA[NEXT>>]]></string>
    <string name="back"><![CDATA[<<BACK]]></string>
    <string name="exit"><![CDATA[<<EXIT]]></string>
    <string name="choose_date">CHOOSE DUE DATE</string>
    <string name="title_activity_way">WAY</string>
    <string name="choose_type">CHOOSE TYPE</string>
    <string name="finish">FINISH</string>
    <string name="take">RECEIVE</string>
    <string name="give">RETURN</string>
    <string name="title_activity_core">core</string>
    <string name="core_name">Name</string>
    <string name="core_amount">Amount</string>
    <string name="core_due_date">Due Date</string>
    <string name="core_method">Method</string>
</resources>