<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#ff01b79b"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/core_name"
                android:id="@+id/textView"
                android:layout_column="0"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#ffa9faff"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/core_amount"
                android:id="@+id/textView2"
                android:layout_column="1"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#ffa9faff"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/core_due_date"
                android:id="@+id/textView3"
                android:layout_column="1"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#ffa9faff"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/core_method"
                android:id="@+id/textView4"
                android:layout_column="1"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#ffa9faff"
                android:layout_gravity="center"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>
</LinearLayout>