<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lashit.debt.way"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#ff01b79b"
   >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/choose_type"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#ffa9faff"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.12"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/give"
            android:button="@null"
            android:layout_gravity="center"
            android:gravity="center"
            android:checked="false"
            android:layout_weight="0.32"
            android:background="@drawable/oval"
            android:id="@+id/button5"
            android:textColor="#ff01b79b"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/take"
            android:layout_gravity="center"
            android:gravity="center"
            android:button="@null"
            android:layout_weight="0.32"
            android:checked="false"
            android:background="@drawable/oval"
            android:id="@+id/button6"
            android:textColor="#ff01b79b"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.12"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/back"
            android:id="@+id/button3"
            android:layout_weight="0.25"
            android:background="#ff01b79b"
            android:textColor="#ffa9faff"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/finish"
            android:id="@+id/button4"
            android:layout_weight="0.25"
            android:background="#ff01b79b"
            android:textColor="#ffa9faff"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"/>

</LinearLayout>
    </LinearLayout>