<LinearLayout
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:gravity="center"
tools:context="com.lashit.debt.calender"
    android:background="#ff01b79b"
    android:weightSum="1">
<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.1"
    android:text="@string/choose_date"
    android:layout_gravity="center"
    android:gravity="center"
    android:textSize="30sp"
    android:textStyle="bold"
    android:textColor="#ffa9faff"/>
<DatePicker
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/datePicker"
    android:layout_gravity="center_horizontal"
    android:layout_weight="0.78"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/back"
            android:id="@+id/button3"
            android:layout_weight="0.25"
            android:background="#ff01b79b"
            android:textColor="#ffa9faff"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/next"
            android:id="@+id/button4"
            android:layout_weight="0.25"
            android:background="#ff01b79b"
            android:textColor="#ffa9faff"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"/>
    </LinearLayout>
</LinearLayout>
